Add infor about assigned reading to intro
Signed-off-by: Jason Lowe-Power <jason@lowepower.com>

--- a/modules/Introduction/_posts/2000-02-01-intro.md
+++ b/modules/Introduction/_posts/2000-02-01-intro.md
@@ -137,13 +137,47 @@ More information on the tests can be found [on the syllabus]({{'/syllabus' | rel
 
 ### Books
 
+#### Assigned readings
+
+Throughout this course you will find "Reading" callouts.
+Most modules will have some reading associated with them.
+These readings provide increased depth and detail beyond the lecture videos and discussions.
+You will be **responsible for the content in these readings** which may or may not be covered in lecture videos or discussions.
+
+These readings are split between the 154B section and the 201A section.
+Examples of how these will appear are shown below.
+
+{% include reading.html section="Sections 1.6 and 1.9" ed1_section="Sections 1.7 and 1.10" %}
+
+{% include reading-grad.html section="Sections 1.8-1.10" %}
+
+In rare cases where there is a difference between the two editions of the Computer Organization and Design texts, the reading for each edition will be specified.
+
+#### ECS 154B textbook
+
 There are two books for this class.
 The lectures and reading will be from *Computer Organization and Design RISC-V Edition: The Hardware/Software Interface* by D. A. Patterson and J. L. Hennessy.
 This book is available on Canvas (for a price via "Equitable" Access).
 You may also have luck using Google to find the book.
 
+I will be using the *Second Edition* of Computer Organization, but if you have the first edition, there are only small changes.
+When or if it is necessary, I will provide the content from the second edition if it is not in the first.
+In other words, you can buy either edition.
+
 I have also suggested that you get *The RISC-V Reader: An Open Architecture Atlas* by David Patterson and Andrew Waterman.
 I find this book to be a very useful reference while developing the DINO CPU.
 However, all of the information in this book can be found for free in the [RISC-V specification](https://riscv.org/specifications/isa-spec-pdf/) although the specification isn't as easy to read.
 
+#### ECS 201A readings
+
+For the graduate section, ECS 201A, we will be using *Computer Architecture: A Quantitative Approach* 6th Edition. John L. Hennessy and David A. Patterson.
+It's a very readable book.
+Also, this is a great textbook to have around if you're planning on staying in the computer systems field.
+
+There will also be a weekly paper reading for the grad section.
+You will be required to write a short summary of the paper before each discussion section, and we will discuss your reviews during discussion.
+
+The reading list is shown below.
+
 {% include prompt.html %}
+
