--- a/modules/Introduction/_posts/2000-01-01-index.md
+++ b/modules/Introduction/_posts/2000-01-01-index.md
@@ -2,12 +2,9 @@
 title: Computer Architecture Basics
 ---
 
-Welcome to ECS 154B: Computer Architecture!
+Welcome to *ECS 154B* or *ECS 201A*: Computer Architecture!
 
 This first module [briefly introduces the class]({% post_url /modules/Introduction/2000-02-01-intro %}), motivates computer architecture with some [recent security vulnerabilities]({% post_url /modules/Introduction/2000-03-01-security %}), discusses the [current state of technology]({% post_url /modules/Introduction/2000-04-01-technology %}) in this field, and discusses how to [evaluate computer systems]({% post_url /modules/Introduction/2000-05-01-evaluation %}).
-
-Note: the quiz due dates are flexible this first week.
-There will be no late penalties for quizzes in the first week.
 
 <ul>
 {% assign cats = site.categories["Introduction"] | reverse %}
