--- a/modules/Introduction/_posts/2000-02-01-intro.md
+++ b/modules/Introduction/_posts/2000-02-01-intro.md
@@ -1,137 +1,32 @@
 ---
 title: "Class Introduction"
-discussion: 791100718966505542
 ---
 
 ![SMBC comic](https://www.smbc-comics.com/comics/20110217.gif)
 
 First of all, welcome!
 
-Welcome to the online-only version of UC Davis ECS 154B Computer Architecture in Winter Quarter 2021!
-I have offered this class one other time in an online format (Spring 2020).
-I have taken what I learned from that offering and made some change for this quarter.
-However, I'm still learning how best to teach online.
+Welcome to UC Davis ECS 154B/201A Computer Architecture in Winter Quarter 2022!
+This is the first time we're combining the undergraduate and graduate courses.
+I'm looking forward to improving the computer architecture course for both the undergrads and the grad students!
+
+If you would like to see an online-only version of the undergraduate course, you can find my Winter 2021 offering [here](https://jlpteaching.github.io/ECS154B/) (<https://jlpteaching.github.io/ECS154B/>).
 
 My goal with this class is to encourage as much participation and interaction as possible.
 I learn best from interacting with others.
-So, I'm going to provide you with as many ways to interact with me, with our TA (Maryam), and each other as possible.
+So, I'm going to provide you with as many ways to interact with me, with our TAs (Maryam and Hoa), and each other as possible.
 
-## What is this class? **VIDEO**
+## Lecture 1: Introduction
 
-Here, we find our first video.
-Throughout these materials, there will be embedded videos for you to watch.
-These will be taking the place of in-person lecture.
+Unfortunately, this first week is online.
+After the lecture, I will post the video below.
 
-{% include video.html id="1_pv0u2rbm" %}
-
-This video welcomes you to the class!
-
-Usually, these videos will be 5-15 minutes long so that you won't be overwhelmed.
-After each video, there will be a short Canvas-based quiz to check your understanding.
-There is more information about quizzes [below](#quizzes).
-
-## Class organization **VIDEO**
-
-{% include video.html id="1_bscg5e5v" %}
-
-Video describing the class organization.
-
-As previously mentioned, this class will be all online.
-For details of the class policies, see the [syllabus]({{'/syllabus' | relative_url}}).
-Below, I'll briefly discuss some of the changes from a normal "in-person" class.
-
-### **Quiz** Just testing you
-
-{% include quiz.html id="102876" %}
-
-### Lectures
-
-Instead of in-person lectures, all of the content that I will be delivering will be through this website and videos.
-You can find all of the videos on [this website]({{'/' | relative_url}}) hosted by [Aggie Video](https://video.ucdavis.edu/).
-
-Most of the content will be via the video lectures since this is a high bandwidth way for me to deliver content.
-However, there will also be links and further explanation written to go along with the videos.
-
-### Quizzes
-
-There will be a short quiz after every few videos to help promote learning through this asynchronous medium.
-You can take these quizzes as many times as you like.
-The quizzes are due every couple of days, kind of like a normal lecture.
-There is no late penalty for quizzes, so if something comes up, you can take the quiz after you have found time to watch the video.
-
-I think you'll learn best if you complete the quiz, then come back later and fix any errors you may have made.
-Therefore, when you submit your quiz, you will not immediately see what you got right and wrong.
-*When the quiz is due,* you will see all of the correct and incorrect answers.
-At that time you can go back and update any questions you got wrong for full credit.
-
-Note: quizzes are due when we would have been covering those topics in "real" lecture.
-By doing the quizzes before the due date (or on the day it's due) you will make sure that you're keeping  up with the course.
-
-Quizzes will close even to late submission 1 week after they are due (except for the first week's quizzes).
-
-More information about the quizzes can be found [on the syllabus]({{'/syllabus' | relative_url}}#quizzes).
-
-### Discussion
-
-Not only will I be presenting lectures asynchronously through video, but discussions will also be online.
-We will be using [Discord](https://discord.com/) for discussion groups.
-
-I'm going to try something different for lecture/discussion.
-Since this is all remote, I don't believe that synchronous lectures make sense.
-Instead, all lecture material will be available asynchronously as video/text on the [website](https://jlpteaching.github.io/ECS154B/).
-
-Even though most of the content of this class is going to be available asynchronously, I do think that some synchronous communication is important!
-Thus, I'm going to convert all lectures/discussion into small group discussion sections.
-There will be 8 sections each week and each section will be 25 minutes.
-The discussion section times are during our scheduled lecture/discussion times.
-If you have a hard conflict with *all* of these times **contact Jason immediately!**
-
-Attending discussion is *required* (see [participation on the syllabus]({{'/syllabus' | relative_url}}#participation) for more details).
-However, you're only required to attend one discussion time each week.
-I would prefer you to attend the same one each week, but it's not required.
-
-The details about the discussion sections can be found [on the syllabus]({{'/syllabus' | relative_url}}#discussion).
-
-As always, let me know if there are any questions/comments!
-This is something new to all of us, and if it doesn't work out, we'll try something new :).
-
-### Project
-
-Throughout this class you will be designing the *Davis In-Order* CPU or [DINO CPU](https://github.com/jlpteaching/dinocpu-wq21).
-The DINO CPU assignments will roughly follow lectures.
-You can find more information, and all of the assignments, on the [DINO CPU repository for Winter Quarter 2021](https://github.com/jlpteaching/dinocpu-wq21).
-
-#### [Assignment 1: Getting started with Chisel](https://jlpteaching.github.io/dinocpu-wq21/assignments/assignment-1.md)
-
-In this assignment, we will introduce you to the [Chisel](https://www.chisel-lang.org/) "hardware construction language" by asking you to implement a couple of simple circuits in Chisel.
-First, you will implement the ALU control unit that you will use in the single cycle CPU design.
-Then, you will begin implementing the single-cycle CPU datapath.
-By the end of this assignment you will be able to correctly execute 10 RISC-V instructions (about 25%)!
-
-#### [Assignment 2: A single-cycle CPU design](https://jlpteaching.github.io/dinocpu-wq21/assignments/assignment-2.md)
-
-In this assignment, you will extend what you started in [assignment 1](assignments/assignment-1.md) and implement the rest of the RISC-V RV32I instruction set!
-To do this, you will complete the datapath implementation and implement the control logic for the processor.
-At the end, you will be able to run *real applications* compiled with GCC on your processor!
-
-#### [Assignment 3: A pipelined CPU design](https://jlpteaching.github.io/dinocpu-wq21/assignments/assignment-3.md)
-
-In this assignment, broken into two parts, you will be implementing a more realistic, pipelined-based core design.
-In the first part, you will split your single cycle design into five different pipeline stages and ensure that all instructions except control have a correctly wired datapath.
-Then, in part two you will finish wiring the rest of the datapath and the control path for the control instructions and implement the hazard detection and forwarding logic.
-
-#### [Assignment 4: A pipelined CPU design](https://jlpteaching.github.io/dinocpu-wq21/assignments/assignment-4.md)
-
-TBD
-
-#### [Assignment 5: A pipelined CPU design](https://jlpteaching.github.io/dinocpu-wq21/assignments/assignment-5.md)
-
-TBD
+{% include video.html %}
 
 ### Tests
 
-There will be three tests this quarter.
-The tests will be after each of the three main modules, [processor architecture](../../processor architecture/index), [memory architecture](../../memory architecture/index), and [parallel architecture](../../parallel architecture/index).
+There will be two tests this quarter.
+The tests will be after each of the main modules, [processor architecture](../../processor architecture/index) and [memory architecture](../../memory architecture/index)/[parallel architecture](../../parallel architecture/index).
 
 More information on the tests can be found [on the syllabus]({{'/syllabus' | relative_url}}#tests).
 
@@ -178,6 +73,3 @@ There will also be a weekly paper reading for the grad section.
 You will be required to write a short summary of the paper before each discussion section, and we will discuss your reviews during discussion.
 
 The reading list is shown below.
-
-{% include prompt.html %}
-
