Fix build error from moving security
Signed-off-by: Jason Lowe-Power <jason@lowepower.com>

--- a/modules/Introduction/_posts/2000-01-01-index.md
+++ b/modules/Introduction/_posts/2000-01-01-index.md
@@ -4,7 +4,7 @@ title: Computer Architecture Basics
 
 Welcome to *ECS 154B* or *ECS 201A*: Computer Architecture!
 
-This first module [briefly introduces the class]({% post_url /modules/Introduction/2000-02-01-intro %}), motivates computer architecture with some [recent security vulnerabilities]({% post_url /modules/Introduction/2000-03-01-security %}), discusses the [current state of technology]({% post_url /modules/Introduction/2000-04-01-technology %}) in this field, and discusses how to [evaluate computer systems]({% post_url /modules/Introduction/2000-05-01-evaluation %}).
+This first module [briefly introduces the class]({% post_url /modules/Introduction/2000-02-01-intro %}), motivates computer architecture with an introduction, discusses the [current state of technology]({% post_url /modules/Introduction/2000-04-01-technology %}) in this field, and discusses how to [evaluate computer systems]({% post_url /modules/Introduction/2000-05-01-evaluation %}).
 
 <ul>
 {% assign cats = site.categories["Introduction"] | reverse %}
