--- a/modules/DINO CPU/_posts/2000-01-01-index.md
+++ b/modules/DINO CPU/_posts/2000-01-01-index.md
@@ -2,3 +2,41 @@
 title: DINO CPU Assignments (for ECS 154B)
 ---
 
+See the [GitHub Repository](https://github.com/jlpteaching/dinocpu-wq22) for high-level details about the DINO CPU project and how to contribute.
+
+You can find documentation in the [DINO CPU repository](https://github.com/jlpteaching/dinocpu-wq22/blob/main/documentation/).
+
+[Chisel notes](https://github.com/jlpteaching/dinocpu-wq22/blob/main/documentation/chisel-notes/overview.md) goes through an introduction to Chisel and how to create hardware.
+
+The [Chisel cheat sheet](https://github.com/jlpteaching/dinocpu-wq22/blob/main/documentation/chisel-notes/overview.md) is particularly useful for the projects.
+
+There's also a list of [common errors](https://github.com/jlpteaching/dinocpu-wq22/blob/main/documentation/common-errors.md) that you may run into while working on the DINO CPU.
+
+Finally, for debugging, the documentation on [Single stepping](https://github.com/jlpteaching/dinocpu-wq22/blob/main/documentation/single-stepping.md) will be very useful.
+
+## [Assignment 1: Getting started with Chisel]({{'modules/DINO CPU/assignment-1' | relative_url}})
+
+In this assignment, we will introduce you to the [Chisel](https://www.chisel-lang.org/) "hardware construction language" by asking you to implement a couple of simple circuits in Chisel.
+First, you will implement the ALU control unit that you will use in the single cycle CPU design.
+Then, you will begin implementing the single-cycle CPU datapath.
+By the end of this assignment you will be able to correctly execute 10 RISC-V instructions (about 25%)!
+
+## [Assignment 2: A single-cycle CPU design]({{'modules/DINO CPU/assignment-2' | relative_url}})
+
+In this assignment, you will extend what you started in [assignment 1]({{'modules/DINO CPU/assignment-1' | relative_url}}) and implement the rest of the RISC-V RV32I instruction set!
+To do this, you will complete the datapath implementation and implement the control logic for the processor.
+At the end, you will be able to run *real applications* compiled with GCC on your processor!
+
+## [Assignment 3: A pipelined CPU design]({{'modules/DINO CPU/assignment-3' | relative_url}})
+
+In this assignment, broken into two parts, you will be implementing a more realistic, pipelined-based core design.
+In the first part, you will split your single cycle design into five different pipeline stages and ensure that all instructions except control have a correctly wired datapath.
+Then, in part two you will finish wiring the rest of the datapath and the control path for the control instructions and implement the hazard detection and forwarding logic.
+
+## [Assignment 4: TBD]({{'modules/DINO CPU/assignment-4' | relative_url}})
+
+TBD
+
+## [Assignment 5: TBD]({{'modules/DINO CPU/assignment-5' | relative_url}})
+
+TBD
