--- a/modules/DINO CPU/_posts/2000-01-01-index.md
+++ b/modules/DINO CPU/_posts/2000-01-01-index.md
@@ -2,6 +2,12 @@
 title: DINO CPU Assignments (for ECS 154B)
 ---
 
+![Cute Dino](/img/dinocpu/dino-128.png)
+
+In this course, you will be implementing the Davis IN-Order CPU (DINO CPU) design in [Chisel](https://www.chisel-lang.org/), a high-level [hardware description language](https://en.wikipedia.org/wiki/Hardware_description_language).
+
+## DINO CPU documentation
+
 See the [GitHub Repository](https://github.com/jlpteaching/dinocpu-wq22) for high-level details about the DINO CPU project and how to contribute.
 
 You can find documentation in the [DINO CPU repository](https://github.com/jlpteaching/dinocpu-wq22/blob/main/documentation/).
@@ -14,29 +20,68 @@ There's also a list of [common errors](https://github.com/jlpteaching/dinocpu-wq
 
 Finally, for debugging, the documentation on [Single stepping](https://github.com/jlpteaching/dinocpu-wq22/blob/main/documentation/single-stepping.md) will be very useful.
 
-## [Assignment 1: Getting started with Chisel]({{'modules/DINO CPU/assignment-1' | relative_url}})
+## Assignments/Projects
+
+### [Assignment 1: Getting started with Chisel]({{'modules/DINO CPU/assignment1' | relative_url}})
 
 In this assignment, we will introduce you to the [Chisel](https://www.chisel-lang.org/) "hardware construction language" by asking you to implement a couple of simple circuits in Chisel.
 First, you will implement the ALU control unit that you will use in the single cycle CPU design.
 Then, you will begin implementing the single-cycle CPU datapath.
 By the end of this assignment you will be able to correctly execute 10 RISC-V instructions (about 25%)!
 
-## [Assignment 2: A single-cycle CPU design]({{'modules/DINO CPU/assignment-2' | relative_url}})
+### [Assignment 2: A single-cycle CPU design]({{'modules/DINO CPU/assignment2' | relative_url}})
 
 In this assignment, you will extend what you started in [assignment 1]({{'modules/DINO CPU/assignment-1' | relative_url}}) and implement the rest of the RISC-V RV32I instruction set!
 To do this, you will complete the datapath implementation and implement the control logic for the processor.
 At the end, you will be able to run *real applications* compiled with GCC on your processor!
 
-## [Assignment 3: A pipelined CPU design]({{'modules/DINO CPU/assignment-3' | relative_url}})
+### [Assignment 3: A pipelined CPU design]({{'modules/DINO CPU/assignment3' | relative_url}})
 
 In this assignment, broken into two parts, you will be implementing a more realistic, pipelined-based core design.
 In the first part, you will split your single cycle design into five different pipeline stages and ensure that all instructions except control have a correctly wired datapath.
 Then, in part two you will finish wiring the rest of the datapath and the control path for the control instructions and implement the hazard detection and forwarding logic.
 
-## [Assignment 4: TBD]({{'modules/DINO CPU/assignment-4' | relative_url}})
+### [Assignment 4: TBD]({{'modules/DINO CPU/assignment4' | relative_url}})
 
 TBD
 
-## [Assignment 5: TBD]({{'modules/DINO CPU/assignment-5' | relative_url}})
+### [Assignment 5: TBD]({{'modules/DINO CPU/assignment5' | relative_url}})
 
 TBD
+
+## DINOCPU Videos
+
+You will find video tutorials and examples on the DINOCPU Spring 2020 project here.
+
+All videos will be hosted on the UC Davis Aggie video platform.
+
+* Basics
+  * [Setup](#setup)
+  * [Chisel Example](#chisel-example)
+  * [Single-Stepper Example](#single-stepper-example)
+* Pipelined
+  * [Bubbles vs Stalls](#bubbles-vs-stalls)
+
+### Setup
+
+<iframe id="kaltura_player" src="https://cdnapisec.kaltura.com/p/1770401/sp/177040100/embedIframeJs/uiconf_id/29032722/partner_id/1770401?iframeembed=true&playerId=kaltura_player&entry_id=0_9qlq45sz&flashvars[mediaProtocol]=rtmp&amp;flashvars[streamerType]=rtmp&amp;flashvars[streamerUrl]=rtmp://www.kaltura.com:1935&amp;flashvars[rtmpFlavors]=1&amp;flashvars[localizationCode]=en&amp;flashvars[leadWithHTML5]=true&amp;flashvars[sideBarContainer.plugin]=true&amp;flashvars[sideBarContainer.position]=left&amp;flashvars[sideBarContainer.clickToClose]=true&amp;flashvars[chapters.plugin]=true&amp;flashvars[chapters.layout]=vertical&amp;flashvars[chapters.thumbnailRotator]=false&amp;flashvars[streamSelector.plugin]=true&amp;flashvars[EmbedPlayer.SpinnerTarget]=videoHolder&amp;flashvars[dualScreen.plugin]=true&amp;flashvars[Kaltura.addCrossoriginToIframe]=true&amp;&wid=0_84mpa2zz" width="400" height="285" allowfullscreen webkitallowfullscreen mozAllowFullScreen allow="autoplay *; fullscreen *; encrypted-media *" sandbox="allow-forms allow-same-origin allow-scripts allow-top-navigation allow-pointer-lock allow-popups allow-modals allow-orientation-lock allow-popups-to-escape-sandbox allow-presentation allow-top-navigation-by-user-activation" frameborder="0" title="Kaltura Player"></iframe>
+
+In this video, we cover setup for remote connections to the CSIF machines using VSCode and cloning of the DINOCPU project.
+
+### Chisel Example
+
+<iframe id="kaltura_player" src="https://cdnapisec.kaltura.com/p/1770401/sp/177040100/embedIframeJs/uiconf_id/29032722/partner_id/1770401?iframeembed=true&playerId=kaltura_player&entry_id=0_ol7ybl9a&flashvars[mediaProtocol]=rtmp&amp;flashvars[streamerType]=rtmp&amp;flashvars[streamerUrl]=rtmp://www.kaltura.com:1935&amp;flashvars[rtmpFlavors]=1&amp;flashvars[localizationCode]=en&amp;flashvars[leadWithHTML5]=true&amp;flashvars[sideBarContainer.plugin]=true&amp;flashvars[sideBarContainer.position]=left&amp;flashvars[sideBarContainer.clickToClose]=true&amp;flashvars[chapters.plugin]=true&amp;flashvars[chapters.layout]=vertical&amp;flashvars[chapters.thumbnailRotator]=false&amp;flashvars[streamSelector.plugin]=true&amp;flashvars[EmbedPlayer.SpinnerTarget]=videoHolder&amp;flashvars[dualScreen.plugin]=true&amp;flashvars[Kaltura.addCrossoriginToIframe]=true&amp;&wid=0_b2999c4i" width="400" height="285" allowfullscreen webkitallowfullscreen mozAllowFullScreen allow="autoplay *; fullscreen *; encrypted-media *" sandbox="allow-forms allow-same-origin allow-scripts allow-top-navigation allow-pointer-lock allow-popups allow-modals allow-orientation-lock allow-popups-to-escape-sandbox allow-presentation allow-top-navigation-by-user-activation" frameborder="0" title="Kaltura Player"></iframe>
+
+In this video, we cover a simple Chisel example to highlight the basic syntax and project workflow.
+
+### Single-Stepper Example
+
+<iframe id="kaltura_player" src="https://cdnapisec.kaltura.com/p/1770401/sp/177040100/embedIframeJs/uiconf_id/29032722/partner_id/1770401?iframeembed=true&playerId=kaltura_player&entry_id=0_kv1v647d&flashvars[mediaProtocol]=rtmp&amp;flashvars[streamerType]=rtmp&amp;flashvars[streamerUrl]=rtmp://www.kaltura.com:1935&amp;flashvars[rtmpFlavors]=1&amp;flashvars[localizationCode]=en&amp;flashvars[leadWithHTML5]=true&amp;flashvars[sideBarContainer.plugin]=true&amp;flashvars[sideBarContainer.position]=left&amp;flashvars[sideBarContainer.clickToClose]=true&amp;flashvars[chapters.plugin]=true&amp;flashvars[chapters.layout]=vertical&amp;flashvars[chapters.thumbnailRotator]=false&amp;flashvars[streamSelector.plugin]=true&amp;flashvars[EmbedPlayer.SpinnerTarget]=videoHolder&amp;flashvars[dualScreen.plugin]=true&amp;flashvars[Kaltura.addCrossoriginToIframe]=true&amp;&wid=0_mnv600kf" width="400" height="285" allowfullscreen webkitallowfullscreen mozAllowFullScreen allow="autoplay *; fullscreen *; encrypted-media *" sandbox="allow-forms allow-same-origin allow-scripts allow-top-navigation allow-pointer-lock allow-popups allow-modals allow-orientation-lock allow-popups-to-escape-sandbox allow-presentation allow-top-navigation-by-user-activation" frameborder="0" title="Kaltura Player"></iframe>
+
+In this video, we cover how to use the Single-Stepper to debug your DINOCPU implementations.
+
+### Bubbles vs Stalls
+
+<iframe id="kaltura_player" src="https://cdnapisec.kaltura.com/p/1770401/sp/177040100/embedIframeJs/uiconf_id/29032722/partner_id/1770401?iframeembed=true&playerId=kaltura_player&entry_id=0_su1azcqk&flashvars[mediaProtocol]=rtmp&amp;flashvars[streamerType]=rtmp&amp;flashvars[streamerUrl]=rtmp://www.kaltura.com:1935&amp;flashvars[rtmpFlavors]=1&amp;flashvars[localizationCode]=en&amp;flashvars[leadWithHTML5]=true&amp;flashvars[sideBarContainer.plugin]=true&amp;flashvars[sideBarContainer.position]=left&amp;flashvars[sideBarContainer.clickToClose]=true&amp;flashvars[chapters.plugin]=true&amp;flashvars[chapters.layout]=vertical&amp;flashvars[chapters.thumbnailRotator]=false&amp;flashvars[streamSelector.plugin]=true&amp;flashvars[EmbedPlayer.SpinnerTarget]=videoHolder&amp;flashvars[dualScreen.plugin]=true&amp;flashvars[Kaltura.addCrossoriginToIframe]=true&amp;&wid=0_kvgdk4fp" width="400" height="285" allowfullscreen webkitallowfullscreen mozAllowFullScreen allow="autoplay *; fullscreen *; encrypted-media *" sandbox="allow-forms allow-same-origin allow-scripts allow-top-navigation allow-pointer-lock allow-popups allow-modals allow-orientation-lock allow-popups-to-escape-sandbox allow-presentation allow-top-navigation-by-user-activation" frameborder="0" title="Kaltura Player"></iframe>
+
+In this video, we cover the differences of flushing and stalling, as well as an example of a bubble moving through the pipelined DINOCPU project.
