Fix dino image link
Signed-off-by: Jason Lowe-Power <jason@lowepower.com>

--- a/modules/DINO CPU/_posts/2000-01-01-index.md
+++ b/modules/DINO CPU/_posts/2000-01-01-index.md
@@ -2,7 +2,7 @@
 title: DINO CPU Assignments (for ECS 154B)
 ---
 
-![Cute Dino](/img/dinocpu/dino-128.png)
+![Cute Dino]({{'img/dinocpu/dino-128.png' | relative_url}})
 
 In this course, you will be implementing the Davis IN-Order CPU (DINO CPU) design in [Chisel](https://www.chisel-lang.org/), a high-level [hardware description language](https://en.wikipedia.org/wiki/Hardware_description_language).
 
