--- a/modules/Introduction/_posts/2000-02-01-intro.md
+++ b/modules/Introduction/_posts/2000-02-01-intro.md
@@ -21,7 +21,7 @@ So, I'm going to provide you with as many ways to interact with me, with our TAs
 Unfortunately, this first week is online.
 After the lecture, I will post the video below.
 
-{% include video.html %}
+{% include video.html id="1_cya38ci4" %}
 
 ### Tests
 
@@ -77,7 +77,7 @@ The reading list is shown below.
 |   Due Date      | Reading Material    |
 |-----------------|---------------------|
 | 01/05/2022      | [There’s plenty of room at the Top: What will drive computer performance after Moore’s law?](https://www.science.org/doi/10.1126/science.aam9744)|
-| 01/12/2022      | [Read Chapters 1-3: Learning gem5 (Intro, Getting Started, Modifying/Extending)](https://www.gem5.org/documentation/learning_gem5/introduction/) and Read Chapter 5, Computer Architecture Performance Evaluation Methods|       
+| 01/12/2022      | [Read Chapters 1-3: Learning gem5 (Intro, Getting Started, Modifying/Extending)](https://www.gem5.org/documentation/learning_gem5/introduction/) and Read Chapter 5, Computer Architecture Performance Evaluation Methods|
 | 01/19/2022      | [Power Struggles: Revisiting the RISC vs. CISC Debate on Contemporary ARM and x86 Architectures](https://research.cs.wisc.edu/vertical/papers/2013/hpca13-isa-power-struggles.pdf)|
 | 01/26/2022      | [Instruction-Level Parallel Processing](https://www.jstor.org/stable/pdf/2879168.pdf)|
 | 02/02/2022      | [Dynamic speculation and synchronization of data dependences](https://dl.acm.org/doi/10.1145/264107.264189)|
