--- a/modules/Processor Architecture/_posts/2000-01-10-index.md
+++ b/modules/Processor Architecture/_posts/2000-01-10-index.md
@@ -19,7 +19,7 @@ If you did not take ECS 50 or find yourself struggling to keep up in this first 
 
 {% include page-toc.html name="isa" %}
 
-[Assignment 1](https://jlpteaching.github.io/dinocpu-wq21/assignments/assignment-2.html) **DUE 1/17**
+[154B Assignment 1]({{'modules/dino cpu/assignment1' | relative_url}}) **DUE 1/17**
 
 See [Machine code examples **VIDEO**](../isa/#machine-code-examples-video) for some helpful hints.
 
@@ -27,18 +27,18 @@ See [Machine code examples **VIDEO**](../isa/#machine-code-examples-video) for s
 
 Next, we will talk about [how to design a single-cycle CPU](../single-cycle/).
 This design will use combinational logic to do all of the steps to complete an instruction *in a single cycle*.
-[Assignment 1](https://jlpteaching.github.io/dinocpu-wq21/assignments/assignment-1.html) and [Assignment 2](https://jlpteaching.github.io/dinocpu-wq21/assignments/assignment-2.html) have you implement this design in Chisel.
+[154B Assignment 1]({{'modules/dino cpu/assignment1' | relative_url}}) and [154B Assignment 2]({{'modules/dino cpu/assignment2' | relative_url}}) have you implement this design in Chisel.
 This design is covered in Section 4.3 and 4.4 of *Computer Organization and Design*.
 
 {% include page-toc.html name="single-cycle" %}
 
-[Assignment 2](https://jlpteaching.github.io/dinocpu-wq21/assignments/assignment-2.html) **DUE 1/24**
+[154B Assignment 2]({{'modules/dino cpu/assignment2' | relative_url}}) **DUE 1/23**
 
 ## Pipelined processor design
 
 After covering the basics of processor design, we will start optimizing this design to try to get better performance and come closer to how real systems like the one pictured above is designed.
 Our first optimization will be adding [pipelining](../pipelined/) to our design.
-This is covered in Section 4.5 and 4.6 of *Computer Organization and Design* and is the basis for [Assignment 3](https://jlpteaching.github.io/dinocpu-wq21/assignments/assignment-3.html).
+This is covered in Section 4.5 and 4.6 of *Computer Organization and Design* and is the basis for [Assignment 3]({{'modules/dino cpu/assignment3' | relative_url}}).
 
 {% include page-toc.html name="pipelined" %}
 
