Revert to old videos for ISA section
Signed-off-by: Jason Lowe-Power <jason@lowepower.com>

--- a/modules/Processor Architecture/_posts/2000-02-01-isa.md
+++ b/modules/Processor Architecture/_posts/2000-02-01-isa.md
@@ -1,6 +1,5 @@
 ---
 title: ISAs and Machine Representation
-discussion: 796055702966763560
 ---
 
 ![XKCD comic "real programmers"](https://imgs.xkcd.com/comics/real_programmers.png)
@@ -14,8 +13,6 @@ If you did not take ECS 50 or find yourself struggling to keep up in this first 
 
 {% include reading-grad.html section="Appendix A (Skim only)" %}
 
-{% include video.html %}
-
 ## What is an ISA?
 
 {% include reading.html section="Section 1.3" %}
@@ -25,8 +22,13 @@ If you did not take ECS 50 or find yourself struggling to keep up in this first 
 First, let's start by discussing *what is the **architecture**?*
 In the video below, I describe the different parts of the computing stack and how the architecture defines how the software and hardware interacts.
 
+{% include video.html id="0_j97k7yb5" %}
+
 If you're interested in the details of the three ISAs I mentioned in the above video you can follow the links for the ISA manuals for [RISC-V](https://github.com/riscv/riscv-isa-manual/releases/download/Ratified-IMAFDQC/riscv-spec-20191213.pdf) ([github link](https://github.com/riscv/riscv-isa-manual)), [Intel X86](https://software.intel.com/content/www/us/en/develop/articles/intel-sdm.html), and [ARM](https://developer.arm.com/documentation/ddi0487/latest).
 
+With that introduction to architecture and ISAs, let's now dig a little deeper into what is exactly **is** the "ISA".
+
+{% include video.html id="0_ftbvfftf" %}
 
 ### RISC vs CISC
 
@@ -35,6 +37,14 @@ If you're interested in the details of the three ISAs I mentioned in the above v
 Callback to the [Turing Lecture](https://www.youtube.com/watch?v=3LVeEjsn8Ts).
 From 13:08-16:40 talks about *why* we moved from CISC ISAs to RISC ISAs.
 You can (optionally) read a [blog post](https://www.sigarch.org/riscy-history/) that Dave Patterson wrote which gives some more background on this fundamental change in computer architecture.
+
+Below, I talk more about the difference between "RISC" and "CISC" machines and  how this is another example of how technology changed, so the "best" way to design a computer also changed.
+
+{% include video.html id="0_1ss43wzz" %}
+
+### **QUIZ** ISAs and RISC vs CISC
+
+Use canvas to complete the quiz!
 
 ## RISC-V
 
@@ -50,7 +60,26 @@ You can find *all* of the details about the RISC-V ISA in the [RISC-V Specificat
 
 You can find the instructions that we care about, the 32-bit integer instructions, in the [opcode table]({{"/img/riscv-instr.pdf" | relative_url}}).
 
+{% include video.html id="0_41tifybp" %}
+
+{% include video.html id="0_bc54a6ps" %}
+
+These two videos (I got tired after the first one) discuss some details of the RISC-V ISA and give a quick example of a small RISC-V program.
 More details are available in Chapter 2 of *Computer Organization and Design* and the *RISC-V Reader*.
+
+### Question: "Why 7 bits for the opcode?"
+
+There was a great question on from a student in Spring Quarter 2020. They asked,
+
+> From my understanding, the opcode of an instruction specifies what type of instruction it is or what the instruction does.
+> My question is why is the opcode 7 bits wide (representing 2^7=128 possible operations) when there are only 47 types of instructions in the RISC-V table here.
+> In this table there are much less than 128 unique opcodes.
+> Couldn't we use less bits to represent the opcode?
+> What occurs if a value of say 0b1111111 (which isn't in the table) happens to be the value of the opcode?
+
+Here's my answer!
+
+{% include video.html id="0_xrz5rmxs" %}
 
 ## Machine code examples
 
@@ -72,3 +101,7 @@ Note that the first video's `add` example is basically the answer to the questio
 ### Optional further reading: Compiling, linking, and assembling
 
 {% include reading.html section="Sections 2.13 and 2.15" %}
+
+## **QUIZ** RISC-V and machine representation
+
+Use canvas to complete the quiz!
