Add a page for discussion sessions
Signed-off-by: Hoa Nguyen <hoanguyen@ucdavis.edu>

--- a/modules/DINO CPU/_posts/2000-01-01-index.md
+++ b/modules/DINO CPU/_posts/2000-01-01-index.md
@@ -49,6 +49,8 @@ TBD
 
 TBD
 
+## Discussions({{'modules/dino cpu/discussions' | relative_url}})
+
 ## DINOCPU Videos
 
 You will find video tutorials and examples on the DINOCPU Spring 2020 project here.
