Fix the link to the discussion sessions
Signed-off-by: Hoa Nguyen <hoanguyen@ucdavis.edu>

--- a/modules/DINO CPU/_posts/2000-01-01-index.md
+++ b/modules/DINO CPU/_posts/2000-01-01-index.md
@@ -49,7 +49,7 @@ TBD
 
 TBD
 
-## Discussions({{'modules/dino cpu/discussions' | relative_url}})
+## [Discussions]({{'modules/dino cpu/discussions' | relative_url}})
 
 ## DINOCPU Videos
 
