Update ISA section
Signed-off-by: Jason Lowe-Power <jason@lowepower.com>

--- a/modules/Processor Architecture/_posts/2000-02-01-isa.md
+++ b/modules/Processor Architecture/_posts/2000-02-01-isa.md
@@ -59,13 +59,21 @@ Specifically, we'll be using the rv32i variant of RISC-V.
 You can find *all* of the details about the RISC-V ISA in the [RISC-V Specification document](https://riscv.org/specifications/isa-spec-pdf/).
 
 You can find the instructions that we care about, the 32-bit integer instructions, in the [opcode table]({{"/img/riscv-instr.pdf" | relative_url}}).
+Note that *this quarter* (Winter Quarter 2022), the 154B class will be implementing the 64-bit version of the RISC-V integer ISA.
+Very little changes from what is discussed below.
+Details of the 64-bit ISA are covered in the book, and in the RISC-V Reader.
+
+The main differences are:
+
+1. The register file is 64 bits wide
+2. There are a few extra instructions to implement (wider shift instructions and loads and stores).
 
 {% include video.html id="0_41tifybp" %}
 
 {% include video.html id="0_bc54a6ps" %}
 
 These two videos (I got tired after the first one) discuss some details of the RISC-V ISA and give a quick example of a small RISC-V program.
-More details are available in Chapter 2 of *Computer Organization and Design* and the *RISC-V Reader*.
+More details are available in Chapter 2 of *Computer Organization and Design*, Section A.9 in *A Quantitative Approach* and the *RISC-V Reader*.
 
 ### Question: "Why 7 bits for the opcode?"
 
