Update ILP section
Signed-off-by: Jason Lowe-Power <jason@lowepower.com>

--- a/modules/Processor Architecture/_posts/2000-05-01-ilp.md
+++ b/modules/Processor Architecture/_posts/2000-05-01-ilp.md
@@ -1,13 +1,14 @@
 ---
 title: "Instruction-Level Parallelism"
-discussion: 796055828573847602
 ---
 
 ![An ancient XKCD](https://imgs.xkcd.com/comics/paths.jpg)
 
 ## Static ILP
 
-{% include reading.html section="Section 4.10" %}
+{% include reading.html section="Section 4.11" ed1_section="Section 4.10" %}
+
+{% include reading-grad.html section="Sections 3.1, 3.2, 3.7" %}
 
 ### Instruction scheduling
 
@@ -27,22 +28,11 @@ Using this insight, we can develop a new kind of ISA in which we can explicitly 
 
 {% include video.html id="0_cuql5qo6" %}
 
-{% include prompt.html content="
-How would you modify the pipelined CPU design [discussed previously](../pipelined) to implement a VLIW instruction set?
-" %}
-
 Obviously, there are pros and cons to VLIW-like ISAs.
 In fact, as you can probably guess, there are more cons than pros (we haven't talked about VLIW until now, right?).
 The next video discusses some of why we don't see VLIW systems today.
 
 {% include video.html id="0_wk3y9639" %}
-
-{% include prompt.html content="
-So, it's difficult to always find independent instructions statically.
-But what about *dynamically*?
-
-Can you think of a way to modify the pipelined design to issue two instructions (or more!) every cycle?
-"%}
 
 #### A bit about Intel Itanium (a *real* VLIW design)
 
@@ -52,11 +42,13 @@ Rather than listen to me talk about the history of the Itanium, let's go back to
 
 ### **QUIZ** Static scheduling
 
-{% include quiz.html id="111821" %}
+Use canvas to complete the quiz!
 
 ## Dynamic ILP
 
-{% include reading.html section="Section 4.10" %}
+{% include reading.html section="Section 4.11" ed1_section="Section 4.10" %}
+
+{% include reading-grad.html section="Sections 3.4, 3.5, 3.6, 3.8" %}
 
 Now, can we do the same thing as we discussed above, but do it automatically in hardware?
 
@@ -113,12 +105,6 @@ Each time you issue an instruction
 - look up the translation for all source registers
 {% endcomment %}
 
-{% include prompt.html content="
-Do you think that a dynamically issued out of order processor with register renaming (wow, that's a mouthful!) consumes more or less power than an in order pipeline (like assignment 3)?
-
-If so, how would you figure out if this is extra power is \"worth it\"?
-"%}
-
 ### **QUIZ** Dynamic ILP
 
-{% include quiz.html id="112016" %}
+Use canvas to complete the quiz!
