--- a/modules/Processor Architecture/_posts/2000-06-01-summary.md
+++ b/modules/Processor Architecture/_posts/2000-06-01-summary.md
@@ -4,6 +4,12 @@ title: "Summary of Processor Architecture"
 
 ![XKCD comic](https://imgs.xkcd.com/comics/abstraction.png)
 
+Lecture video from WQ 2020.
+
+{% include video.html id="1_hlzed1hy" %}
+
+The mic wasn't working, so the audio is available on this [zoom link](https://ucdavis.zoom.us/rec/share/U1Pt-exUyuUmde40uxbKvvj3BLu8vcWO5A31qjfqbaqRAJrEcj6kPfzrprkhhMOi.5sIXyvb470gYUWTW?startTime=1643651956000).
+
 ## Summary of what we've learned
 
 Below is a quick summary of what we've learned in this sections and definitions of some terms that may not have been clear.
