--- a/modules/Processor Architecture/_posts/2000-06-01-summary.md
+++ b/modules/Processor Architecture/_posts/2000-06-01-summary.md
@@ -4,13 +4,14 @@ title: "Summary of Processor Architecture"
 
 ![XKCD comic](https://imgs.xkcd.com/comics/abstraction.png)
 
-Lecture video from WQ 2022.
+Lecture video 1 from WQ 2022.
 
-{% include video.html id="1_hlzed1hy" %}
+{% include video.html id="1_zsym52te" %}
 
-The mic wasn't working, so the audio is available on this [zoom link](https://ucdavis.zoom.us/rec/share/U1Pt-exUyuUmde40uxbKvvj3BLu8vcWO5A31qjfqbaqRAJrEcj6kPfzrprkhhMOi.5sIXyvb470gYUWTW?startTime=1643651956000).
+The mic wasn't working, so we had to sync the audio from a zoom recording.
+Thanks Mythreya!
 
-Lecture video from WQ 2022.
+Lecture video 2 from WQ 2022.
 
 {% include video.html id="1_cvvb8tm1" %}
 
