Add reading for memory section
Signed-off-by: Jason Lowe-Power <jason@lowepower.com>

--- a/modules/Memory Architecture/_posts/2000-03-01-caches.md
+++ b/modules/Memory Architecture/_posts/2000-03-01-caches.md
@@ -1,6 +1,5 @@
 ---
 title: "Caches and Memory Hierarchy"
-discussion: 809206780403908618
 ---
 
 ![xkcd comic](https://imgs.xkcd.com/comics/bun.png)
@@ -11,6 +10,8 @@ Unfortunately, there isn't a perfect memory device.
 So, we need to construct a system with multiple different memory devices to try to get the best of all possible devices!
 
 {% include reading.html section="Sections 5.1, 5.3-5.4, 5.8-5.9" %}
+
+{% include reading-grad.html section="Section 2.2" %}
 
 ## Basic caching
 
@@ -61,10 +62,6 @@ To motivate a memory hierarchy, this video goes over another AMAT example.
 
 This video talks about how a multi-level hierarchy can improve cache performance.
 
-### **QUIZ** AMAT, hierarchy, and performance
-
-{% include quiz.html id="114562" %}
-
 ## Cache design
 
 {% include reading.html section="Section 5.4,5.8" %}
@@ -114,10 +111,6 @@ This video goes into detail of how to design a set-associative cache and how to 
 
 This video talks about the area and power overheads of set-associative caches.
 
-### **QUIZ** Cache design 1
-
-{% include quiz.html id="115046" %}
-
 ## Replacement policies
 
 {% include reading.html section="Section 5.4" %}
@@ -143,7 +136,3 @@ This video discusses what happens when we try to write data to a cache and diffe
 {% include video.html id="0_33cjboxj" %}
 
 This final video discusses the three C's of cache misses.
-
-### **QUIZ** Summary of caches
-
-{% include quiz.html id="115020" %}
