--- a/modules/Memory Architecture/_posts/2000-04-01-virtual.md
+++ b/modules/Memory Architecture/_posts/2000-04-01-virtual.md
@@ -1,6 +1,5 @@
 ---
 title: "Virtual Memory"
-discussion: 809206839211982908
 ---
 
 Virtualization and virtual memory enable multiple processes to *share* a single set of hardware.
@@ -9,6 +8,8 @@ Without hardware support for these software mechanisms, we wouldn't have wide-sp
 ![xkcd on virtualization](https://imgs.xkcd.com/comics/xkcde.png)
 
 {% include reading.html section="Sections 5.6,5.7" %}
+
+{% include reading-grad.html section="Section 2.4" %}
 
 ## Virtualization
 
@@ -38,10 +39,6 @@ This video goes back and talks about more motivation for virtual memory and intr
 
 This video shows an example simple page table implementation: A flat page table.
 
-### **QUIZ** Introduction to virtual memory
-
-{% include quiz.html id="115714" %}
-
 ### Multi-level page tables
 
 {% include video.html id="0_7tgkv2oo" %}
@@ -69,10 +66,6 @@ This video discusses a cache structure for virtual address translation: the TLB.
 {% include video.html id="0_juu68l8l" %}
 
 This video covers other virtual memory optimizations such as huge pages.
-
-### **QUIZ** Multi-level page tables and TLBs
-
-{% include quiz.html id="115908" %}
 
 ## Virtual virtual memory
 
