Add lecture from 2/11
Signed-off-by: Jason Lowe-Power <jason@lowepower.com>

--- a/modules/Memory Architecture/_posts/2000-03-01-caches.md
+++ b/modules/Memory Architecture/_posts/2000-03-01-caches.md
@@ -4,6 +4,10 @@ title: "Caches and Memory Hierarchy"
 
 ![xkcd comic](https://imgs.xkcd.com/comics/bun.png)
 
+Lecture from 2/11
+
+{% include video.html id=1_hkgzq5h2" %}
+
 ## Memory hierarchy introduction
 
 Unfortunately, there isn't a perfect memory device.
