fix missing quote
Signed-off-by: Jason Lowe-Power <jason@lowepower.com>

--- a/modules/Memory Architecture/_posts/2000-03-01-caches.md
+++ b/modules/Memory Architecture/_posts/2000-03-01-caches.md
@@ -6,7 +6,7 @@ title: "Caches and Memory Hierarchy"
 
 Lecture from 2/11
 
-{% include video.html id=1_hkgzq5h2" %}
+{% include video.html id="1_hkgzq5h2" %}
 
 ## Memory hierarchy introduction
 
