--- a/modules/Memory Architecture/_posts/2000-03-01-caches.md
+++ b/modules/Memory Architecture/_posts/2000-03-01-caches.md
@@ -12,6 +12,10 @@ Lecture from 2/14
 
 {% include video.html id="1_si4cmrst" %}
 
+Lecture from 2/18
+
+{% include video.html id="1_wzs20e9l" %}
+
 ## Memory hierarchy introduction
 
 Unfortunately, there isn't a perfect memory device.
