Add recent lectures
Signed-off-by: Jason Lowe-Power <jason@lowepower.com>

--- a/modules/Memory Architecture/_posts/2000-03-01-caches.md
+++ b/modules/Memory Architecture/_posts/2000-03-01-caches.md
@@ -16,6 +16,10 @@ Lecture from 2/18
 
 {% include video.html id="1_wzs20e9l" %}
 
+Lecture from 2/23
+
+{% include video.html id="1_0r402z97" %}
+
 ## Memory hierarchy introduction
 
 Unfortunately, there isn't a perfect memory device.
