--- a/modules/Memory Architecture/_posts/2000-04-01-virtual.md
+++ b/modules/Memory Architecture/_posts/2000-04-01-virtual.md
@@ -7,6 +7,10 @@ Without hardware support for these software mechanisms, we wouldn't have wide-sp
 
 ![xkcd on virtualization](https://imgs.xkcd.com/comics/xkcde.png)
 
+Lecture from 2/25
+
+{% include video.html id="1_qxa7oygz" %}
+
 {% include reading.html section="Sections 5.6,5.7" %}
 
 {% include reading-grad.html section="Section 2.4" %}
