Add lectures for 2/28 and 3/1
Signed-off-by: Jason Lowe-Power <jason@lowepower.com>

--- a/modules/Memory Architecture/_posts/2000-05-01-summary.md
+++ b/modules/Memory Architecture/_posts/2000-05-01-summary.md
@@ -5,6 +5,10 @@ title: "Memory System Architecture Summary"
 In this section, we are going to go over an end-to-end example of a memory system.
 Through this example, we'll touch on an number of of new topics in how memory systems are actually designed.
 
+Lecture from 3/2
+
+{% include video.html id="1_4e7ofefz" %}
+
 ## An end-to-end design
 
 In this section, we are going to go through the details of an [AMD Epyc Processor](https://www.amd.com/en/processors/epyc-7002-series).
