--- a/modules/Memory Architecture/_posts/2000-04-01-virtual.md
+++ b/modules/Memory Architecture/_posts/2000-04-01-virtual.md
@@ -11,6 +11,14 @@ Lecture from 2/25
 
 {% include video.html id="1_qxa7oygz" %}
 
+Lecture from 2/28
+
+{% include video.html id="1_u6o5a15i" %}
+
+Lecture from 3/2
+
+{% include video.html id="1_4e7ofefz" %}
+
 {% include reading.html section="Sections 5.6,5.7" %}
 
 {% include reading-grad.html section="Section 2.4" %}
