Add template files and update assignment 5
Signed-off-by: Jason Lowe-Power <jason@lowepower.com>

--- a/modules/gem5/_posts/2000-06-01-assigment5.md
+++ b/modules/gem5/_posts/2000-06-01-assigment5.md
@@ -8,6 +8,42 @@ Title: ECS 201A Assignment 5
 
 ## Table of Contents
 
+- [Assignment 5 -- Due 11:59 pm (PST) Friday, March 11th 2022](#assignment-5----due-1159-pm-pst-friday-march-11th-2022)
+- [Table of Contents](#table-of-contents)
+- [Introduction](#introduction)
+- [Application](#application)
+  - [Implementation 1: Naive](#implementation-1-naive)
+  - [Implementation 2: Chunking the array](#implementation-2-chunking-the-array)
+  - [Implementation 3: Let's not be so racy](#implementation-3-lets-not-be-so-racy)
+  - [Implementation 4: Combining 2 and 3](#implementation-4-combining-2-and-3)
+  - [Implementation 5: Knowing the cache](#implementation-5-knowing-the-cache)
+  - [Implementation 6: With blocking...](#implementation-6-with-blocking)
+  - [Template files](#template-files)
+- [Real hardware experiments](#real-hardware-experiments)
+  - [Question 1](#question-1)
+  - [Question 2](#question-2)
+  - [Question 3](#question-3)
+- [gem5 experiments](#gem5-experiments)
+  - [A bit about gem5](#a-bit-about-gem5)
+  - [Using gem5](#using-gem5)
+  - [gem5's output](#gem5s-output)
+    - [Performance](#performance)
+    - [Cache behavior](#cache-behavior)
+      - [Hits and misses](#hits-and-misses)
+      - [L1 miss latency](#l1-miss-latency)
+      - [Average memory access time](#average-memory-access-time)
+      - [Read sharing](#read-sharing)
+      - [Write "sharing"](#write-sharing)
+  - [Getting ready to answer questions](#getting-ready-to-answer-questions)
+  - [Question 4](#question-4)
+  - [Question 5](#question-5)
+  - [Question 6](#question-6)
+  - [Question 7](#question-7)
+  - [Question 8](#question-8)
+  - [Question 9 (**201A only**)](#question-9-201a-only)
+- [Submission](#submission)
+- [Grading](#grading)
+- [Academic misconduct reminder](#academic-misconduct-reminder)
 
 ## Introduction
 
@@ -148,6 +184,21 @@ for (int i=tid*chunk_size; i < (tid+1)*chunk_size && i < length; i++) {
 
 ### Template files
 
+You can download the template files [here]({{ '/img/assignment5-template.tgz' | relative_url }}).
+
+`assignment5-template/parallel.cpp`
+  - The 6 different algorithms. You can compile this to generate `parallel` binaries.
+`assignment5-template/run.py`
+  - The gem5 run script
+`assignment5-template/parallel-x86`
+  - The `parallel` binary to run on real hardware.
+`assignment5-template/parallel-x86-gem5`
+  - The `parallel` binary to use with gem5. Same as `parallel-x86` except for the gem5-specific special instructions around the region of interest.
+`assignment5-template/my_mesi/`
+  - The files for the coherence protocol configuration
+`assignment5-template/gem5-x86`
+  - The gem5 binary.
+
 ## Real hardware experiments
 
 On a computer *with at least 4 cores* (preferably 8 or more) run the different parallel algorithms to sum an array described above.
@@ -210,6 +261,12 @@ This new binary (`parallel-x86-gem5`) is just like the one you ran on real hardw
 
 Like the timing code (e.g., timer start and timer stop) that's used to measure the *time* of the region of interest on real hardware, the annotations added for gem5 reset the statistics and dump the statistics at the beginning and end of the region of interest, respectively.
 
+**For 201A** DO NOT USE YOUR gem5 BINARY!
+
+I found a bug in gem5 when creating this assignment.
+Some important statistics (e.g., everything in Ruby...) were not being reset correctly.
+The binary included in the template has the bug fixed.
+
 ### Using gem5
 
 To use the `run.py` script, there are three parameters: the number of cores in the system to simulate (this will allow you to simulate up to 16 cores), the algorithm that the `parallel` program should use (this is passed to the benchmark application), and a "crossbar latency" (`xbar_latency`).
@@ -218,7 +275,7 @@ For now, ignore the last parameter.
 To run gem5, you can do something like below:
 
 ```sh
-gem5-x86 run.py 1 1 10
+./gem5-x86 run.py 1 1 10
 ```
 
 You can also run `gem5-x86 run.py --help` for details on the command line parameters.
@@ -229,7 +286,7 @@ For example, the code below will create a `stats.txt` file in `<cwd>/m5out/1-cor
 Note that I used the parameters I passed to `run.py` to help name the output directory.
 
 ```sh
-gem5-x86 --outdir=m5out/1-core-1-alg run.py 1 1
+./gem5-x86 --outdir=m5out/1-core-1-alg run.py 1 1
 ```
 
 If you want to build gem5 yourself, you can
