--- a/modules/gem5/_posts/2000-06-01-assigment5.md
+++ b/modules/gem5/_posts/2000-06-01-assigment5.md
@@ -6,10 +6,7 @@ Title: ECS 201A Assignment 5
 
 ## Assignment 5 -- Due 11:59 pm (PST) Friday, March 11th 2022
 
-## Table of Contents
-
-- [Assignment 5 -- Due 11:59 pm (PST) Friday, March 11th 2022](#assignment-5----due-1159-pm-pst-friday-march-11th-2022)
-- [Table of Contents](#table-of-contents)
+### Table of Contents
 - [Introduction](#introduction)
 - [Application](#application)
   - [Implementation 1: Naive](#implementation-1-naive)
@@ -44,11 +41,12 @@ Title: ECS 201A Assignment 5
 - [Submission](#submission)
 - [Grading](#grading)
 - [Academic misconduct reminder](#academic-misconduct-reminder)
+- [Additional notes](#additional-notes)
 
 ## Introduction
 
 In this assignment, you will explore the performance bottlenecks in poorly-written parallel code.
-We will take a very simple application, summing the values in an array, and see how if you are not careful how you parallelize the application that the performance will be quite poor.
+We will take a very simple application, summing the values in an array, and see how if you are not careful how you parallelize the application, the performance will become quite poor.
 
 Then, after seeing which algorithms perform well and poorly on real hardware, we will use a cycle-level simulator ([gem5](https://www.gem5.org/)) with a detailed cache model to understand the performance.
 
@@ -186,24 +184,25 @@ for (int i=tid*chunk_size; i < (tid+1)*chunk_size && i < length; i++) {
 
 You can download the template files [here]({{ '/img/assignment5-template.tgz' | relative_url }}).
 
-`assignment5-template/parallel.cpp`
-  - The 6 different algorithms. You can compile this to generate `parallel` binaries.
-`assignment5-template/run.py`
-  - The gem5 run script
-`assignment5-template/parallel-x86`
-  - The `parallel` binary to run on real hardware.
-`assignment5-template/parallel-x86-gem5`
-  - The `parallel` binary to use with gem5. Same as `parallel-x86` except for the gem5-specific special instructions around the region of interest.
-`assignment5-template/my_mesi/`
-  - The files for the coherence protocol configuration
-`assignment5-template/gem5-x86`
-  - The gem5 binary.
+
+  - The 6 different algorithms. You can compile this to generate `parallel` binaries: `assignment5-template/parallel.cpp`
+
+  - The gem5 run script: `assignment5-template/run.py`
+
+  - The `parallel` binary to run on real hardware: `assignment5-template/parallel-x86`
+
+  - The `parallel` binary to use with gem5. Same as `parallel-x86` except for the gem5-specific special instructions around the region of interest: `assignment5-template/parallel-x86-gem5`
+
+  - The files for the coherence protocol configuration: `assignment5-template/my_mesi/`
+
+  - The gem5 binary: `assignment5-template/gem5-x86`
 
 ## Real hardware experiments
 
 On a computer *with at least 4 cores* (preferably 8 or more) run the different parallel algorithms to sum an array described above.
 You can run `grep -m1 "cpu cores" /proc/cpuinfo` to find out how many cores you have.
 It should say something like `cpu cores       : 8`
+
 Note: we will only support running on x86 Linux machines.
 If you want to use a different system, we probably won't be able to help, and you're not guaranteed the correct results.
 
@@ -438,3 +437,9 @@ You may discuss *high level concepts* with one another (e.g., talking about the 
 Any code found on GitHub that is not the base template you are given will be reported to SJA.
 If you want to sidestep this problem entirely, don't create a public fork and instead create a private repository to store your work.
 GitHub now allows everybody to create unlimited private repositories for up to three collaborators, and **you shouldn't have *any* collaborators** for your code in this class.
+
+## Additional notes
+* Start early! There is a learning curve for gem5, so start early and ask questions on Campuswire and in discussion.
+
+* If you need help, come to office hours for the TA, or post your questions on Campuswire.
+
