--- a/modules/gem5/_posts/2000-06-01-assigment5.md
+++ b/modules/gem5/_posts/2000-06-01-assigment5.md
@@ -227,15 +227,15 @@ For algorithm 1, does increasing the number of threads improve performance or hu
 
 ### Question 2
 
-For algorithm 6, does increasing the number of threads improve performance or hurt performance? Use data to back up your answer.
+(a) For algorithm 6, does increasing the number of threads improve performance or hurt performance? Use data to back up your answer.
 
-What is the speedup when you use 2, 4, 8, 16 threads (only answer with up to the number of cores on your system).
+(b) What is the speedup when you use 2, 4, 8, 16 threads (only answer with up to the number of cores on your system).
 
 ### Question 3
 
-Using the data for all 6 algorithms, what is the most important optimization, chunking the array, using different result addresses, or putting padding between the result addresses?
+(a) Using the data for all 6 algorithms, what is the most important optimization, chunking the array, using different result addresses, or putting padding between the result addresses?
 
-Speculate how the hardware implementation is causing this result. What is it about the hardware that causes this optimization to be most important?
+(b) Speculate how the hardware implementation is causing this result. What is it about the hardware that causes this optimization to be most important?
 
 ## gem5 experiments
 
@@ -260,7 +260,7 @@ This new binary (`parallel-x86-gem5`) is just like the one you ran on real hardw
 
 Like the timing code (e.g., timer start and timer stop) that's used to measure the *time* of the region of interest on real hardware, the annotations added for gem5 reset the statistics and dump the statistics at the beginning and end of the region of interest, respectively.
 
-**For 201A** DO NOT USE YOUR gem5 BINARY!
+**For 201A** *DO NOT USE YOUR gem5 BINARY!*
 
 I found a bug in gem5 when creating this assignment.
 Some important statistics (e.g., everything in Ruby...) were not being reset correctly.
@@ -279,6 +279,8 @@ To run gem5, you can do something like below:
 
 You can also run `gem5-x86 run.py --help` for details on the command line parameters.
 
+*Note: Don't forget to give a proper full path for run.py file in your command.*
+
 When you run gem5, an output directory is created (`m5out/` by default) which holds a file called `stats.txt` which has way too many detailed statistics.
 I would suggest using an extra command line parameter `--outdir=<name>` to save your output to different directories (otherwise, gem5 will just overwrite the last simulation).
 For example, the code below will create a `stats.txt` file in `<cwd>/m5out/1-core-1-alg/`.
@@ -287,8 +289,6 @@ Note that I used the parameters I passed to `run.py` to help name the output dir
 ```sh
 ./gem5-x86 --outdir=m5out/1-core-1-alg run.py 1 1
 ```
-
-If you want to build gem5 yourself, you can
 
 ### gem5's output
 
@@ -302,7 +302,7 @@ For *reasons* (which I won't get into), you should ignore all of the controllers
 
 To get the performance/time of the region of interest, you can see the 3rd line in the stats file: `simSeconds`.
 This is the **simulated time** or the time that the *simulator* says the program *will* take.
-(As opposed tot he `hostSeconds` which is how long it took to simulate on your host.)
+(As opposed to the `hostSeconds` which is how long it took to simulate on your host.)
 This simulated time should be the same order of magnitude as what you say on your hardware, around 1 millisecond.
 
 #### Cache behavior
@@ -379,9 +379,9 @@ The following questions will ask you to consult these outputs and use data to ba
 
 ### Question 4
 
-What is the speedup of algorithm 1 and speedup of algorithm 6 on *16 cores* as estimated by gem5?
+(a) What is the speedup of algorithm 1 and speedup of algorithm 6 on *16 cores* as estimated by gem5?
 
-How does this compare to what you saw on the real system?
+(b) How does this compare to what you saw on the real system?
 
 ### Question 5
 
@@ -408,12 +408,14 @@ Discuss which algorithms you are comparing and why.
 
 Let's get back to the question we're trying to answer. From [question 3](#question-3) above, "What is it about the hardware that causes this optimization to be most important?"
 
-So, out of the three characteristics we have looked at, the L1 hit ratio, the read sharing, or the write sharing, which is most important for determining performance?
+So:
+(a) Out of the three characteristics we have looked at, the L1 hit ratio, the read sharing, or the write sharing, which is most important for determining performance?
 Use the average memory latency (and overall performance) to address this question.
 
 Finally, you should have an idea on what optimizations have the biggest impact on the hit ratio, the read sharing performance, and the write sharing performance.
 
-So, using data from the gem5 simulations, now answer what hardware characteristic *causes* the most important optimization to be the most important?
+So:
+(b) Using data from the gem5 simulations, now answer what hardware characteristic *causes* the most important optimization to be the most important?
 
 ### Question 9 (**201A only**)
 
@@ -426,7 +428,51 @@ You can probably get away with just running algorithm 1 and algorithm 6.
 
 ## Submission
 
+For this assignment you don't need to turn in any code files. The only file you need to submit on gradescope at the designated section, is the pdf file of your report. Please do not forget to specify each question according to the outline when you're submitting your work.
+In your report, you're not required to include any data which is not used in your analysis. Only include those that you actually use to justify your answer and make sure they are precisly and cleary specified.
+
+**Note: if the submission does not have *page match* for each question, a *9-points/8-points penalty* for ECS 201A/154B will be applied to the assignment5's grade**
+
 ## Grading
+
+The grading breakdown is as follows (they are subject to change, but they show the relative breakdown):
+
+Total points = 100
+
+**For ECS 201A:**
+
+| #Question       | Points |
+|-----------------|--------|
+| Question 1	    | 5      |
+| Question 2.a	  | 5	     |
+| Question 2.b	  | 5      |
+| Question 3.a    | 10     |
+| Question 3.b    | 5      |
+| Question 4.a	  | 5      |
+| Question 4.b	  | 5      |
+| Question 5	    | 10     |
+| Question 6	    | 10     |
+| Question 7	    | 10     |
+| Question 8.a	  | 10     |
+| Question 8.b	  | 10     |
+| Question 9	    | 10     |
+
+**For ECS 154B:**
+
+| #Question       | Points |
+|-----------------|--------|
+| Question 1	    | 5      |
+| Question 2.a	  | 5	     |
+| Question 2.b	  | 5      |
+| Question 3.a    | 10     |
+| Question 3.b    | 5      |
+| Question 4.a	  | 5      |
+| Question 4.b	  | 5      |
+| Question 5	    | 12     |
+| Question 6	    | 12     |
+| Question 7	    | 12     |
+| Question 8.a	  | 12     |
+| Question 8.b	  | 12     |
 
 ## Academic misconduct reminder
 
